# crab

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: error.rs  main.rs
src/cli/: commands.rs
src/model/: database.rs  entry.rs
src/models/: database.rs  entry.rs  mod.rs
src/storage/: file.rs  mod.rs
src/util/: mod.rs  time.rs
