[package]
name = "crab"
version = "0.1.5"
edition = "2021"
authors = ["Aoi Takahashi <xxx@example.com>"]
description = "A secure credential manager written in Rust"
license = "MIT"
repository = "https://github.com/Aoi-Takahashi/crab"
homepage = "https://github.com/Aoi-Takahashi/crab"
documentation = "https://docs.rs/crab"
readme = "README.md"
keywords = ["cli", "terminal", "rust"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
